--- a/frontend1/src/app/reserva/components/crear-cliente/crear-cliente.component.html
+++ b/frontend1/src/app/reserva/components/crear-cliente/crear-cliente.component.html
@@ -10,4 +10,5 @@
 
 
   <button type="submit" class="btn btn-primary mb-2" (click)=guardar()>Guardar</button>
+  <button type="button" class="btn btn-secondary mb-2" (click)=salir()>Cancelar</button>
 </form>
