add algunas validaciones

--- a/frontend1/src/app/reserva/components/crear-reserva/crear-reserva.component.html
+++ b/frontend1/src/app/reserva/components/crear-reserva/crear-reserva.component.html
@@ -1,18 +1,24 @@
-<form>
+<form name="form" (ngSubmit)="f.form.valid && guardar()" #f="ngForm">
 <ngb-accordion [closeOthers]="true" [activeIds]="activado">
   <ngb-panel id="static-1" title="Restaurante - Fecha - Horario">
     <ng-template ngbPanelContent>
     <div class="form-group row"><label class="col-sm-2 col-form-label">Restaurante: </label>
       <div class="col-sm-4">
-          <select class="form-control" [(ngModel)]="reserva.id_restaurante" name="restaurante" (change)="buscarMesasDisponibles()">
+          <select class="form-control" [(ngModel)]="reserva.id_restaurante" name="restaurante" (change)="buscarMesasDisponibles()" #restaurante="ngModel" [ngClass]="{ 'is-invalid': f.submitted && restaurante.invalid }" required>
             <option *ngFor="let item of lista" [value]="item.id">{{item.nombre}}</option>
           </select>
+          <div *ngIf="f.submitted && restaurante.invalid" class="invalid-feedback">
+            <div *ngIf="restaurante.errors.required">Restaurante requerido</div>
+        </div>
         </div>
     </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Fecha</label>
         <div class="col-sm-4">
-          <input class="form-control" type="date" [(ngModel)]="reserva.fecha" name="fecha" (change)="buscarMesasDisponibles()">
+          <input class="form-control" type="date" [min]="today" [(ngModel)]="reserva.fecha" name="fecha" (change)="buscarMesasDisponibles()" #fecha="ngModel" [ngClass]="{ 'is-invalid': f.submitted && fecha.invalid }" required>
+          <div *ngIf="f.submitted && fecha.invalid" class="invalid-feedback">
+            <div *ngIf="fecha.errors.required">Fecha requerida</div>
+        </div>
         </div>
       </div>
       <br>
@@ -28,9 +34,12 @@
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Horarios:</label>
         <div class="col-sm-4">
-          <select [(ngModel)]="reserva.rango_hora" name="rango" class="form-control" (change)="buscarMesasDisponibles()">
+          <select [(ngModel)]="reserva.rango_hora" name="rango" class="form-control" (change)="buscarMesasDisponibles()" #rango_hora="ngModel" [ngClass]="{ 'is-invalid': f.submitted && rango_hora.invalid }" required>
             <option *ngFor="let item of horarios">{{item}}</option>
           </select>
+          <div *ngIf="f.submitted && rango_hora.invalid" class="invalid-feedback">
+            <div *ngIf="rango_hora.errors.required">Rango hora requerido</div>
+        </div>
         </div>
       </div>
 
@@ -43,19 +52,28 @@
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Mesas Disponibles:</label>
         <div class="col-sm-4">
-          <select [(ngModel)]="reserva.id_mesa" name="mesa" class="form-control">
+          <select [(ngModel)]="reserva.id_mesa" name="mesa" class="form-control" #mesa="ngModel" [ngClass]="{ 'is-invalid': f.submitted && mesa.invalid }" required>
             <option *ngFor="let item of mesas" [value]="item.id">{{item.nombre_mesa+"- Capacidad: "+item.capacidad}}</option>
           </select>
+          <div *ngIf="f.submitted && mesa.invalid" class="invalid-feedback">
+            <div *ngIf="mesa.errors.required">Mesa requerida</div>
+        </div>
         </div>
       </div>
       <br>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Cedula Cliente</label>
         <div class="col-sm-2">
-          <input class="form-control" type="number" [(ngModel)]="cliente.cedula" name="cedula">
+          <input class="form-control" type="number" [(ngModel)]="cliente.cedula" name="cedula" #cedula="ngModel" [ngClass]="{ 'is-invalid': f.submitted && cedula.invalid }" required>
+          <div *ngIf="f.submitted && cedula.invalid" class="invalid-feedback">
+            <div *ngIf="cedula.errors.required">Cedula requerida</div>
+        </div>
         </div>
         <div class="col-sm-4">
-          <input class="form-control" type="text" [(ngModel)]="cliente.nombre" name="nombre" readonly placeholder="Nombre Cliente">
+          <input class="form-control" type="text" [(ngModel)]="cliente.nombre" name="nombre" readonly placeholder="Nombre Cliente" #nombre="ngModel" [ngClass]="{ 'is-invalid': f.submitted && nombre.invalid }" required>
+          <div *ngIf="f.submitted && nombre.invalid" class="invalid-feedback">
+            <div *ngIf="nombre.errors.required">Busque un cliente</div>
+        </div>
         </div>
         <div class="col-sm-2">
           <button class="btn btn-lg btn-outline-secondary" (click)="open()">Buscar cliente</button>
@@ -64,16 +82,24 @@
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Cantidad Solicitada</label>
         <div class="col-sm-4">
-          <input class="form-control" type="number" [(ngModel)]="reserva.cantidad_solicitada" name="cantidad">
+          <input class="form-control" type="number" [(ngModel)]="reserva.cantidad_solicitada" name="cantidad" #cantidad="ngModel" [ngClass]="{ 'is-invalid': f.submitted && cantidad.invalid }" required>
+          <div *ngIf="f.submitted && cantidad.invalid" class="invalid-feedback">
+            <div *ngIf="cantidad.errors.required">Cantidad de comensales no solicitado</div>
         </div>
+        </div>
+
       </div>
-      <button type="button" class="btn btn-primary" (click)="guardar()">Guardar</button>
+      <div class="text-center">
+        <button class="btn btn-primary mr-1">Guardar</button>
+
+    </div>
+
 <!--!(reserva.id_restaurante&&reserva.fecha&&reserva.rango_hora&&mesas.length>0)-->
 
     </ng-template>
   </ngb-panel>
 </ngb-accordion>
-
+{{reserva.fecha}}
 <p>
   <ngb-alert [dismissible]="false" *ngIf="activar">
     <strong>No hay mesas disponibles!</strong>
