--- a/frontend1/src/app/reserva/components/crear-reserva/crear-reserva.component.html
+++ b/frontend1/src/app/reserva/components/crear-reserva/crear-reserva.component.html
@@ -76,7 +76,7 @@
         </div>
         </div>
         <div class="col-sm-2">
-          <button class="btn btn-lg btn-outline-secondary" (click)="open()">Buscar cliente</button>
+          <button type="button" class="btn btn-lg btn-outline-secondary" (click)="open()">Buscar cliente</button>
         </div>
       </div>
       <div class="form-group row">
@@ -99,7 +99,6 @@
     </ng-template>
   </ngb-panel>
 </ngb-accordion>
-{{reserva.fecha}}
 <p>
   <ngb-alert [dismissible]="false" *ngIf="activar">
     <strong>No hay mesas disponibles!</strong>
