--- a/frontend1/src/app/reserva/components/listar-reservas/lista-reservas.component.html
+++ b/frontend1/src/app/reserva/components/listar-reservas/lista-reservas.component.html
@@ -2,6 +2,8 @@
 <div *ngIf="restaurante"><h1>Restaurante:</h1> {{restaurante.nombre}}</div>
 <br>
 <h1>Fecha</h1> {{fecha}}
+<br>
+<div *ngIf="cliente"><h1>Cliente</h1> {{cliente.nombre}} {{cliente.apellido}}</div>
 
 <table class="table table-striped">
     <thead>
