--- a/frontend1/src/app/reserva/components/crear-reserva/crear-reserva.component.html
+++ b/frontend1/src/app/reserva/components/crear-reserva/crear-reserva.component.html
@@ -21,13 +21,13 @@
         </div>
         </div>
       </div>
-      Cantidad de horas:<br>
-      <div>
-          <div class="form-check form-check-inline" *ngFor="let option of [1,2,3,4]">
-            <input class="form-check-input" type="radio"  name="horMax" [(ngModel)]="horaMax" [value]="option" (change)="buildRango()" />
-            <label class="form-check-label">{{option}}</label>
-          </div>
+      <div class="form-group row mb-3">
+        <label class="col-sm-2 col-form-label">Cantidad de horas</label>
+        <div class="col-sm-4">
+          <input class="form-control" type="number" max="4" min="1" [(ngModel)]="horaMax" name="horaMax" (change)="buildRango()">
+        </div>
       </div>
+
 
 
       <div class="form-group row mb-3">
