--- a/frontend1/src/app/reserva/components/crear-reserva/crear-reserva.component.html
+++ b/frontend1/src/app/reserva/components/crear-reserva/crear-reserva.component.html
@@ -60,22 +60,38 @@
         </div>
       </div>
       <div class="form-group row mb-3">
-        <label class="col-sm-2 col-form-label">Cedula Cliente</label>
+        <!-- <label class="col-sm-2 col-form-label">Cedula Cliente</label>
         <div class="col-sm-2">
-          <input class="form-control" type="number" [(ngModel)]="cliente.cedula" name="cedula" #cedula="ngModel" [ngClass]="{ 'is-invalid': f.submitted && cedula.invalid }" required>
+          <input class="form-control" type="number" [(ngModel)]="cedula" name="cedula" [ngClass]="{ 'is-invalid': f.submitted && cedula.invalid }" required>
           <div *ngIf="f.submitted && cedula.invalid" class="invalid-feedback">
             <div *ngIf="cedula.errors.required">Cedula requerida</div>
         </div>
         </div>
         <div class="col-sm-2">
-          <input class="form-control" type="text" [(ngModel)]="cliente.nombre" name="nombre" readonly placeholder="Nombre Cliente" #nombre="ngModel" [ngClass]="{ 'is-invalid': f.submitted && nombre.invalid }" required>
+          <input class="form-control" type="text" [(ngModel)]="nombre" name="nombre" readonly placeholder="Nombre Cliente" [ngClass]="{ 'is-invalid': f.submitted && nombre.invalid }" required>
           <div *ngIf="f.submitted && nombre.invalid" class="invalid-feedback">
             <div *ngIf="nombre.errors.required">Busque un cliente</div>
         </div>
-        </div>
+        </div> -->
         <div class="col-sm-2">
           <button type="button" class="btn btn-outline-secondary" (click)="open()">Buscar cliente</button>
         </div>
+      </div>
+      <div class="form-group row mb-3">
+        <label for="typeahead-focus">Search for a state:</label>
+        <input
+          id="typeahead-focus"
+          type="text"
+          class="form-control"
+          [(ngModel)]="cliente"
+          name="cliente"
+          [ngbTypeahead]="search"
+          [inputFormatter]="formatter"
+          [resultFormatter]="formatter"
+          (focus)="focus$.next($any($event).target.value)"
+          (click)="click$.next($any($event).target.value)"
+          #instance="ngbTypeahead"
+        />
       </div>
       <div class="form-group row mb-3">
         <label class="col-sm-2 col-form-label">Cantidad Solicitada</label>
