--- a/frontend/src/app/consumo/consumo.component.html
+++ b/frontend/src/app/consumo/consumo.component.html
@@ -5,7 +5,7 @@
                 <p class="h5 pb-0 mb-0">Restaurante:</p>
             </div>
             <div class="col-3">
-                <select class="form-select" (change)="obtenerMesas($event)">
+                <select name="mesa" #mesa="ngModel" [(ngModel)]="mesa.id" class="form-select" (change)="obtenerMesas($event)">
                     <option selected disabled>Eliga un restaurante</option>
                     <option *ngFor="let restaurante of listRestaurante" [value]="restaurante.id">{{restaurante.nombre}}</option>
                 </select>
@@ -17,9 +17,29 @@
             </div>
             <div class="col-3">
                 <select class="form-select" aria-label="Seleccionar mesa" [disabled]="disabled" (change)="verificarConsumo($event)">
-                    <option selected disabled>Selecciona una mesa</option>
+                    <option selected>Selecciona una mesa</option>
                     <option *ngFor="let mesa of listMesa" [value]="mesa.id">{{mesa.nombre_mesa}}</option>
                 </select>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-3 d-flex align-items-center justify-content-start">
+                <p class="h5 pb-0 mb-0">Cliente:</p>
+            </div>
+            <div class="col-3">
+                <input
+                id="typeahead-focus"
+                type="text"
+                class="form-control"
+                [(ngModel)]="cliente"
+                name="cliente"
+                [ngbTypeahead]="search"
+                [inputFormatter]="formatter"
+                [resultFormatter]="formatter"
+                (focus)="focus$.next($any($event).target.value)"
+                (click)="click$.next($any($event).target.value)"
+                required
+              />
             </div>
         </div>
     </div>
@@ -95,11 +115,86 @@
                 <div *ngIf="isMessage" class="row mt-3 alert alert-success" role="alert">
                     {{ message }}
                 </div>
+                <div *ngIf="isMessageError" class="row mt-3 alert alert-danger" role="alert">
+                    {{ message }}
+                </div>
             </div>
         </div>
     </div>
     <div *ngIf="mesaOcupada" class="container mt-4">
-            <p>Mesa ocupada agregar componente</p>
+        <div class="row">
+            <div class="col-6">
+                <p class="h4">Agregar detalles consumo</p>
+            </div>
+            <div class="col-6">
+                <p class="h4">Lista de detalles</p>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-6">
+                <div class="card w-75">
+                    <div class="card-body">
+                        <form class="row" [formGroup]="formDetalleConsumo" (ngSubmit)="onSubmit()">
+                            <div class="mb-3 row">
+                                <label for="categoria" class="col-sm-3 col-form-label">Categoria:</label>
+                                <div class="col-sm-9">
+                                    <select class="form-select" aria-label="Default select example" formControlName="id_categoria" (change)="obtenerProductos($event)">
+                                        <option selected disabled>Seleccionar categoria</option>
+                                        <option *ngFor="let categoria of listCategoria" [value]="categoria.id">{{categoria.nombre}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <label for="categoria" class="col-sm-3 col-form-label">Producto:</label>
+                                <div class="col-sm-9">
+                                    <select class="form-select" aria-label="Default select example" formControlName="id_producto">
+                                        <option selected disabled>Selecciona un producto</option>
+                                        <option *ngFor="let producto of listaProducto" [value]="producto.id">{{producto.nombre}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <label for="categoria" class="col-sm-3 col-form-label">Cantidad:</label>
+                                <div class="col-sm-9">
+                                    <input class="form-control" type="number" min="1" formControlName="cantidad">
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <button type="submit" [disabled]="!formDetalleConsumo.valid" class="btn btn-primary">Agregar</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="row">
+                    <table class="table">
+                        <thead>
+                          <tr>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Cantidad</th>
+                            <th scope="col">Precio</th>
+                            <th scope="col">SubTotal</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let detalle of listaDetalle">
+                                <td>{{detalle.nombre}}</td>
+                                <td>{{detalle.cantidad}}</td>
+                                <td>{{detalle.precio}}</td>
+                                <td>{{detalle.subtotal}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div *ngIf="listaDetalle.length > 0" class="row mt-2">
+                    <button type="button" (click)="guardarConsumo()" class="btn btn-success">Guardar</button>
+                </div>
+                <div *ngIf="isMessage" class="row mt-3 alert alert-success" role="alert">
+                    {{ message }}
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
